--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 package-lock.json
 node_modules/
+__pycache__/
+src/components/.editorconfig
+src/components/.prettierrc.json
+car-dects-new.v1i.multiclass/
+dataset/
+datasetyolo/
