--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 flask==2.0.2
-requests==2.26.0
-pandas==1.3.3
-numpy==1.21.2
+requests==2.32.3
+pandas==2.2.3
+numpy==2.2.4
 sqlalchemy==1.4.25
-fastapi
-uvicorn
-torch
-Pillow
-ultralytics
+fastapi==0.115.11
+uvicorn==0.34.0
+torch==2.6.0
+Pillow==11.1.0
+ultralytics==8.3.91
